--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  dio: 2.1.13
+  rxdart: ^0.22.0
+  flustars: ^0.2.6+1
+  flutter_datetime_picker: ^1.2.5
+  progress_hud: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -45,6 +50,9 @@ flutter:
     - images/mine.png
     - images/performance.png
     - images/team.png
+    - images/icon_no_1.png
+    - images/icon_no_2.png
+    - images/icon_no_3.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -57,12 +65,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+      - family: HanaleiFill
+        fonts:
+          - asset: fonts/HanaleiFill-Regular.ttf
+      - family: Roboto
+        fonts:
+          - asset: fonts/Roboto-Light.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
